--- a/docs/fields.asciidoc
+++ b/docs/fields.asciidoc
@@ -200,3 +200,290 @@ type: float
 Total virtual memory in bytes.
 
 
+[float]
+== mem Fields
+
+Contains fields memory metrics.
+
+
+
+[float]
+=== mem.heap_used_in_bytes
+
+type: long
+
+Heap used in bytes.
+
+
+[float]
+=== mem.heap_used_percent
+
+type: integer
+
+Heap used in percent.
+
+
+[float]
+=== mem.heap_committed_in_bytes
+
+type: long
+
+Heap committed in bytes.
+
+
+[float]
+=== mem.heap_max_in_bytes
+
+type: long
+
+Heap max in bytes.
+
+
+[float]
+=== mem.non_heap_used_in_bytes
+
+type: long
+
+Non heap used in bytes.
+
+
+[float]
+=== mem.non_heap_committed_in_bytes
+
+type: long
+
+Non heap committed in bytes.
+
+
+[float]
+== pools Fields
+
+Contains Memory Pool statistics
+
+
+
+[float]
+== survivor Fields
+
+Contains Survivor statistics
+
+
+
+[float]
+=== mem.pools.survivor.peak_used_in_bytes
+
+type: long
+
+Peak used in bytes.
+
+
+[float]
+=== mem.pools.survivor.used_in_bytes
+
+type: long
+
+Used in bytes.
+
+
+[float]
+=== mem.pools.survivor.peak_max_in_bytes
+
+type: long
+
+Peak max in bytes.
+
+
+[float]
+=== mem.pools.survivor.max_in_bytes
+
+type: long
+
+Max in bytes.
+
+
+[float]
+=== mem.pools.survivor.committed_in_bytes
+
+type: long
+
+Committed in bytes.
+
+
+[float]
+== old Fields
+
+Contains Old statistics
+
+
+
+[float]
+=== mem.pools.old.peak_used_in_bytes
+
+type: long
+
+Peak used in bytes.
+
+
+[float]
+=== mem.pools.old.used_in_bytes
+
+type: long
+
+Used in bytes.
+
+
+[float]
+=== mem.pools.old.peak_max_in_bytes
+
+type: long
+
+Peak max in bytes.
+
+
+[float]
+=== mem.pools.old.max_in_bytes
+
+type: long
+
+Max in bytes.
+
+
+[float]
+=== mem.pools.old.committed_in_bytes
+
+type: long
+
+Committed in bytes.
+
+
+[float]
+== young Fields
+
+Contains Young statistics
+
+
+
+[float]
+=== mem.pools.young.peak_used_in_bytes
+
+type: long
+
+Peak used in bytes.
+
+
+[float]
+=== mem.pools.young.used_in_bytes
+
+type: long
+
+Used in bytes.
+
+
+[float]
+=== mem.pools.young.peak_max_in_bytes
+
+type: long
+
+Peak max in bytes.
+
+
+[float]
+=== mem.pools.young.max_in_bytes
+
+type: long
+
+Max in bytes.
+
+
+[float]
+=== mem.pools.young.committed_in_bytes
+
+type: long
+
+Committed in bytes.
+
+
+[float]
+== pipeline Fields
+
+Contains pipeline metrics.
+
+
+
+[float]
+=== pipeline.workers
+
+type: integer
+
+Number of workers.
+
+
+[float]
+=== pipeline.batch_size
+
+type: integer
+
+Batch size.
+
+
+[float]
+=== pipeline.batch_delay
+
+type: integer
+
+Batch delay.
+
+
+[float]
+== jvm Fields
+
+Contains jvm metrics.
+
+
+
+[float]
+=== jvm.start_time_in_millis
+
+type: long
+
+Start time in millis.
+
+
+[float]
+== mem Fields
+
+Contains jvm mem metrics.
+
+
+
+[float]
+=== jvm.mem.heap_init_in_bytes
+
+type: long
+
+Heap init in bytes.
+
+
+[float]
+=== jvm.mem.heap_max_in_bytes
+
+type: long
+
+Heap max in bytes.
+
+
+[float]
+=== jvm.mem.non_heap_init_in_bytes
+
+type: long
+
+Non heap init in bytes.
+
+
+[float]
+=== jvm.mem.non_heap_max_in_bytes
+
+type: long
+
+Non heap max in bytes.
+
